--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul class="header__list">
                     <li class="header__item"><a class="header__link" href="#">About Us</a></li>
                     <li class="header__item"><a class="header__link" href="#">Portfolio</a></li>
-                    <li class="header__item"><a class="header__link" href="#"><img
+                    <li class="header__item"><a class="header__link--ink" href="#"><img
                             class="icon" src="src/image/header__icon.png"
                             alt="A tattoo machine icon">Ink house</a></li>
                     <li class="header__item"><a class="header__link" href="#">Masters</a></li>
@@ -26,11 +26,12 @@
             </nav>
         </header>
         <div class="hero-text">
-            <h1 class="hero-text__title">Tattoo Studio </h1>
-            <h2 class="hero-text__title">"Ink House"</h2>
+            <h1 class="hero-text__title">Tattoo Studio<br>
+            <span class="hero-text__span">"Ink House"</span>
+            </h1>
             <p class="hero-text__text">A team of professionals who make tattoos of any complexity, piercing and
                 tattoo removal.</p>
-            <button class="hero-text__button button--style">I want tattoo</button>
+            <button class="button--style hero-text__button ">I want tattoo</button>
         </div>
     </div>
 </div>
@@ -40,19 +41,22 @@
         <div class="about__text">
             <img class="about__img" src="src/image/about__us.png" alt="A master makes a tattoo on an arm">
             <div class="about__text">
-                <h2 class="header about__header">About us</h2>
+                <h2 class="heading about__header">About us</h2>
                 <p class="text about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                     exercitation
                     ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br>
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <br>
+                <p class="text about__text">
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
                     est
                     laborum.</p>
             </div>
         </div>
-        <div class="choose-us">
-            <h2 class="header choose-us__header">
+        </div>
+        <div class="choose-us container">
+            <h2 class="heading choose-us__header">
                 Why should you choose us?
             </h2>
             <ul class="choose-us__list">
@@ -75,12 +79,12 @@
                         tempor incididunt ut labore et dolore magna aliqua.</p>
                 </li>
             </ul>
-        </div>
+
     </div>
 </section>
 <section class="services">
     <div class="container services__container">
-        <h2 class="header services__heading">Our services</h2>
+        <h2 class="heading services__heading">Our services</h2>
         <ul class="services__list">
             <li class="services__item">
                 <img class="services__img" src="src/image/our-services__tattoo.jpg"
@@ -117,7 +121,7 @@
 </section>
 <section class="our-instagram">
     <div class="container our-instagram__container">
-        <h2 class="our-instagram__heading">Our Instagram</h2>
+        <h2 class="our-instagram__heading heading">Our Instagram</h2>
         <p class="our-instagram__paragraph">All information about our tattoo studio, as well as information about the
             promotions, you can find on our page on Instagram.</p>
         <ul class="our-instagram__list">
@@ -146,7 +150,7 @@
 <section class="contact">
     <div class="container contact__container">
         <div class="contact__text-wrapper">
-            <h2 class="contact--heading">Contacts</h2>
+            <h2 class="contact--heading heading">Contacts</h2>
             <ul class="contact__list">
                 <li class="contact__item">
                     <h3 class="contact__subtitle">Address</h3>
