--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <section class="hero">
     <header class="header">
         <div class="container header__container">
-            <nav class="header__nav nav">
-                <ul class="header__list">
+            <nav class="header__nav">
+                <ul class="header__list nav">
                     <li class="header__item">
                         <a href="#" class="header__link">About us</a>
                     </li>
@@ -43,20 +43,21 @@
             </h1>
             <p class="hero__text text">A team of professionals who make tattoos of any complexity, piercing and tattoo
                 removal.</p>
-            <button class="hero__button">I want a tattoo</button>
+            <button class="button--style hero__button">I want a tattoo</button>
         </div>
     </header>
 </section>
 <section class="about">
     <div class="container-xl about__container">
-        <img src="src/image/about__us.png" alt="A master makes a tattoo on an arm" class="about__imag">
+        <img src="src/image/about__us.png" alt="A master makes a tattoo on an arm" class="about__image">
         <div class="about__text-wrapper">
             <h2 class="about__heading heading">About us</h2>
-            <p class="about__text text">
+            <p class="text about__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
                 fugiat nulla pariatur.
+                <br>
                 <br>
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                 laborum.
@@ -64,7 +65,7 @@
         </div>
     </div>
     <div class="container about__choose choose">
-        <h2 class="choose__heading">Why should you choose us?</h2>
+        <h2 class="choose__header">Why should you choose us?</h2>
         <ul class="choose__list-bottom">
             <li class="choose__item">
                 <h3 class="choose__heading">Professional tattoo artists</h3>
@@ -188,5 +189,31 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </section>
+<footer class="footer">
+    <div class="container footer__container">
+        <nav class="header__nav ">
+            <ul class="header__list nav">
+                <li class="header__item">
+                    <a href="#" class="header__link">About us</a>
+                </li>
+                <li class="header__item">
+                    <a href="#" class="header__link">Portfolio</a>
+                </li>
+                <li class="header__item">
+                    <a href="#" class="header__link--bold">
+                        <img src="src/image/header__icon.png" alt="" class="header__icon">
+                        Ink House
+                    </a>
+                </li>
+                <li class="header__item">
+                    <a href="#" class="header__link">Masters</a>
+                </li>
+                <li class="header__item">
+                    <a href="#" class="header__link">Price</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</footer>
 </body>
 </html>
