Added services section markup

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </h1>
             <p class="hero__text text">A team of professionals who make tattoos of any complexity, piercing and tattoo
                 removal.</p>
-            <button class="button--style hero__button">I want a tattoo</button>
+            <button class="button button--style hero__button">I want a tattoo</button>
         </div>
     </header>
 </section>
@@ -98,17 +98,17 @@
         <li class="services__item">
             <img src="src/image/our-services__tattoo.jpg" alt="A girl with a tattoo" class="services__image">
             <h3 class="services__subheading">Tattoo</h3>
-            <button class="button services__button--modify services__button--modify">View more</button>
+            <button class="button services__button--modify services__button">View more</button>
         </li>
         <li class="services__item">
             <img src="src/image/piercing.jpg" alt="A boy with a piercing" class="services__image">
             <h3 class="services__subheading">Piercing</h3>
-            <button class="button services__button--modify services__button--modify">View more</button>
+            <button class="button services__button--modify services__button">View more</button>
         </li>
         <li class="services__item">
             <img src="src/image/tattoo_removal.jpg" alt="A girl with a tattoo" class="services__image">
             <h3 class="services__subheading">Tattoo removal</h3>
-            <button class="button services__button--modify services__button--modify">View more</button>
+            <button class="button services__button--modify services__button">View more</button>
         </li>
     </ul>
 </div>
