--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </p>
         </div>
     </div>
-    <div class="container about__choose choose">
+    <div class="container about__choose orange__heading">
         <h2 class="choose__header">Why should you choose us?</h2>
         <ul class="choose__list-bottom">
             <li class="choose__item">
@@ -93,7 +93,7 @@
 </section>
 <section class="services">
 <div class="container services__container">
-    <h2 class="services__heading heading">Our services</h2>
+    <h2 class="services__heading heading ">Our services</h2>
     <ul class="services__list">
         <li class="services__item">
             <img src="src/image/our-services__tattoo.jpg" alt="A girl with a tattoo" class="services__image">
@@ -113,13 +113,13 @@
     </ul>
 </div>
 </section>
-<section class="consultation">
+<section class="free-consultation">
     <div class="container consultation-container">
-        <h2 class="consultation__heading">Sign up for a free consultation</h2>
+        <h2 class="consultation__heading orange__heading">Sign up for a free consultation</h2>
         <p class="consultation__text text">Sign up for a free consultation in order to discuss all the details with the
             tattoo artist</p>
-        <label class="consultation__input">Your mobile number
-            <input type="text" class="consultation__input">
+        <label class="consultation__label">
+            <input type="text" class="consultation__input" placeholder="Your mobile number">
             <button class="button consultation__button">Send</button>
         </label>
         <p class="consultation__text--bottom">Our manager will contact you within an hour </p>
