--- a/index.html
+++ b/index.html
@@ -92,26 +92,26 @@
     </div>
 </section>
 <section class="services">
-<div class="container services__container">
-    <h2 class="services__heading heading ">Our services</h2>
-    <ul class="services__list">
-        <li class="services__item">
-            <img src="src/image/our-services__tattoo.jpg" alt="A girl with a tattoo" class="services__image">
-            <h3 class="services__subheading">Tattoo</h3>
-            <button class="button services__button--modify services__button">View more</button>
-        </li>
-        <li class="services__item">
-            <img src="src/image/piercing.jpg" alt="A boy with a piercing" class="services__image">
-            <h3 class="services__subheading">Piercing</h3>
-            <button class="button services__button--modify services__button">View more</button>
-        </li>
-        <li class="services__item">
-            <img src="src/image/tattoo_removal.jpg" alt="A girl with a tattoo" class="services__image">
-            <h3 class="services__subheading">Tattoo removal</h3>
-            <button class="button services__button--modify services__button">View more</button>
-        </li>
-    </ul>
-</div>
+    <div class="container services__container">
+        <h2 class="services__heading heading ">Our services</h2>
+        <ul class="services__list">
+            <li class="services__item">
+                <img src="src/image/our-services__tattoo.jpg" alt="A girl with a tattoo" class="services__image">
+                <h3 class="services__subheading">Tattoo</h3>
+                <button class="button services__button--modify services__button">View more</button>
+            </li>
+            <li class="services__item">
+                <img src="src/image/piercing.jpg" alt="A boy with a piercing" class="services__image">
+                <h3 class="services__subheading">Piercing</h3>
+                <button class="button services__button--modify services__button">View more</button>
+            </li>
+            <li class="services__item">
+                <img src="src/image/tattoo_removal.jpg" alt="A girl with a tattoo" class="services__image">
+                <h3 class="services__subheading">Tattoo removal</h3>
+                <button class="button services__button--modify services__button">View more</button>
+            </li>
+        </ul>
+    </div>
 </section>
 <section class="free-consultation">
     <div class="container consultation-container">
@@ -128,20 +128,26 @@
 <section class="our-instagram">
     <div class="container-xl our-instagram__container">
         <h2 class="our-instagram__heading heading">
-            Our instagram
+            Our Instagram
         </h2>
         <p class="our-instagram__text text">All information about our tattoo studio, as well as information about the
-            promotions, you can find on our page on Instagram.</p>
+            promotions,<br> you can find on our page on Instagram.</p>
         <ul class="our-instagram__list">
-            <li class="our-instagram__item"><img src="src/image/instagram-1.jpg" alt="A girl with a tattoo on her back">
+            <li class="our-instagram__item"><img src="src/image/instagram-1.jpg" alt="A girl with a tattoo on her back"
+                                                 class="our-instagram__image">
             </li>
-            <li class="our-instagram__item"><img src="src/image/instagram-2.jpg" alt="A boy with tattoos"></li>
+            <li class="our-instagram__item"><img src="src/image/instagram-2.jpg" alt="A boy with tattoos"
+                                                 class="our-instagram__image"></li>
             <li class="our-instagram__item"><img src="src/image/instagram-3.jpg"
-                                                 alt="A girl with a tatto on the shoulder"></li>
-            <li class="our-instagram__item"><img src="src/image/instagram-3.jpg" alt="A girl with a tattoo on her back">
+                                                 alt="A girl with a tatto on the shoulder" class="our-instagram__image">
+            </li>
+            <li class="our-instagram__item"><img src="src/image/instagram-4.jpg" alt="A girl with a tattoo on her back"
+                                                 class="our-instagram__image">
             </li>
         </ul>
-        <button class="button instagram__button">Follow us</button>
+        <div class="our-instagram__wrapper">
+            <button class="button instagram__button">Follow us</button>
+        </div>
     </div>
 </section>
 <section class="contacts">
@@ -184,9 +190,7 @@
                 </li>
             </ul>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!3m2!1sru!2sua!4v1657889921904!5m2!1sru!2sua!6m8!1m7!1sI8WPAjI7iogHS3lJaY7Q-A!2m2!1d55.69224594474849!2d12.56874893209781!3f194.29796479789334!4f3.1255462891168406!5f0.7820865974627469"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2248.817436770051!2d12.566360516058117!3d55.6921617041346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253021ff84e6f%3A0xf17ab7c425391972!2zRnJlZGVuc2dhZGUgMywgMjIwMCBLw7hiZW5oYXZuLCDQlNCw0L3QuNGP!5e0!3m2!1sru!2sua!4v1657899498749!5m2!1sru!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </section>
 <footer class="footer">
