Added contacts markup

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <h3 class="contacts__subheading">Address </h3>
                         <p class="contacts__text">Fredensgade, 3, 2200 København, Denmark</p>
                     </div>
-                    <div class="contacts__text-wrapper">
+                    <div class="contacts__text-wrapper contacts--bottom">
                         <h3 class="contacts__subheading">Telephone number</h3>
                         <p class="contacts__text">+45 (000)000-00-00</p>
                     </div>
@@ -174,7 +174,7 @@
                         <p class="contacts__text"> 11 a.m. - 6 p.m.</p>
                         <p class="contacts__text">Sunday - day off</p>
                     </div>
-                    <div class="contacts__text-wrapper">
+                    <div class="contacts__text-wrapper contacts-bottom">
                         <h3 class="contacts__subheading">Social networks</h3>
                         <div class="contacts__social-icons">
                             <a href="#"><img src="src/image/instagram-icon.svg" alt="An Instagram icon"
@@ -195,25 +195,25 @@
 </section>
 <footer class="footer">
     <div class="container footer__container">
-        <nav class="header__nav ">
-            <ul class="header__list nav">
-                <li class="header__item">
-                    <a href="#" class="header__link">About us</a>
+        <nav class="footer__nav ">
+            <ul class="footer__list nav">
+                <li class="footer__item">
+                    <a href="#" class="footer__link">About us</a>
                 </li>
-                <li class="header__item">
-                    <a href="#" class="header__link">Portfolio</a>
+                <li class=footer__item">
+                    <a href="#" class="footer__link">Portfolio</a>
                 </li>
-                <li class="header__item">
-                    <a href="#" class="header__link--bold">
+                <li class=footerr__item">
+                    <a href="#" class="footer__link--bold">
                         <img src="src/image/header__icon.png" alt="" class="header__icon">
                         Ink House
                     </a>
                 </li>
-                <li class="header__item">
-                    <a href="#" class="header__link">Masters</a>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Masters</a>
                 </li>
-                <li class="header__item">
-                    <a href="#" class="header__link">Price</a>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Price</a>
                 </li>
             </ul>
         </nav>
