--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
     <header class="header">
         <div class="container header__container">
             <nav class="header__nav">
-                <ul class="header__list nav">
-                    <li class="header__item">
-                        <a href="#" class="header__link">About us</a>
+                <ul class="nav__list nav">
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">About us</a>
                     </li>
-                    <li class="header__item">
-                        <a href="#" class="header__link">Portfolio</a>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Portfolio</a>
                     </li>
-                    <li class="header__item">
-                        <a href="#" class="header__link--bold">
-                            <img src="src/image/header__icon.png" alt="" class="header__icon">
+                    <li class="nav__item">
+                        <a href="#" class="nav__link--bold">
+                            <img src="src/image/header__icon.png" alt="" class="nav__icon">
                             Ink House
                         </a>
                     </li>
-                    <li class="header__item">
-                        <a href="#" class="header__link">Masters</a>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Masters</a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link">Price</a>
+                        <a href="#" class="nav__link">Price</a>
                     </li>
                 </ul>
             </nav>
@@ -195,25 +195,25 @@
 </section>
 <footer class="footer">
     <div class="container footer__container">
-        <nav class="footer__nav ">
-            <ul class="footer__list nav">
-                <li class="footer__item">
-                    <a href="#" class="footer__link">About us</a>
+        <nav class="nav ">
+            <ul class="nav__list nav">
+                <li class="nav__item">
+                    <a href="#" class="nav__link">About us</a>
                 </li>
-                <li class=footer__item">
-                    <a href="#" class="footer__link">Portfolio</a>
+                <li class=nav__item">
+                    <a href="#" class="nav__link">Portfolio</a>
                 </li>
-                <li class=footerr__item">
+                <li class=fnav__item">
                     <a href="#" class="footer__link--bold">
-                        <img src="src/image/header__icon.png" alt="" class="header__icon">
+                        <img src="src/image/header__icon.png" alt="" class="nav__icon">
                         Ink House
                     </a>
                 </li>
-                <li class="footer__item">
-                    <a href="#" class="footer__link">Masters</a>
+                <li class="nav__item">
+                    <a href="#" class="nav__link">Masters</a>
                 </li>
-                <li class="footer__item">
-                    <a href="#" class="footer__link">Price</a>
+                <li class="nav__item">
+                    <a href="#" class="nav__link">Price</a>
                 </li>
             </ul>
         </nav>
