--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
                 <li class="nav__item">
                     <a href="#" class="nav__link">About us</a>
                 </li>
-                <li class=nav__item">
+                <li class="nav__item">
                     <a href="#" class="nav__link">Portfolio</a>
                 </li>
-                <li class=fnav__item">
+                <li class="nav__item">
                     <a href="#" class="footer__link--bold">
                         <img src="src/image/header__icon.png" alt="" class="nav__icon">
                         Ink House
